--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1556740714-a8395b3bf30f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  background-blend-mode: darken;
+  background-color: rgba(0, 0, 0, .5);
+  object-fit: contain;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
+.main-login * {
+  z-index: 1;
+}
+
 
 .register-form {
   height: auto;
@@ -65,11 +78,6 @@
 .crm-content {
   min-height: 100vh;
   padding: 1rem 0 5rem 0;
-}
-
-
-.graph-template {
-  width: 50%;
 }
 
 .footer>span {
