--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   font-family: var(--primary-ff);
 }
 
-.header{
+.header {
   font-weight: bold;
 
 }
@@ -56,6 +56,8 @@
 
 .main-login {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -73,6 +75,11 @@
   z-index: 1;
 }
 
+.user-credentials {
+  background-color: wheat;
+  padding: 1rem 3rem 1rem 3rem;
+  border-radius: 1rem;
+}
 
 .register-form {
   height: auto;
